# workato-integration-quest

./: .env.example  .gitignore  DEPLOY_FASTMCP_CLOUD.md  LICENSE  README.md  TESTING.md  config.py  deploy-fastmcp-cloud.md  game_guide_prompt.md  game_guide_prompt_short.md  integration-quest-mcp-spec.md  pyproject.toml  requirements.txt  server.py  test_all_functions.py  webapp.py
.claude/: settings.local.json
claude-config/: claude_desktop_config.json
data/: enemies.json  items.json
integration-quest/: .gitignore  QUICKSTART.md  README.md  TEST_AUTOMATION_README.md  config.py  game_guide_prompt.md  game_guide_prompt_short.md  play.py  pyproject.toml  remote_server.py  run.py  server.py  test_gameplay.py
integration-quest/data/: descriptions.json  skills.json
integration-quest/models/: __init__.py  combat.py  hero.py  items.py  world.py
integration-quest/systems/: __init__.py  effects.py  generation.py
models/: hero.py  player.py
static/: app.js  index.html  manifest.json  styles.css  sw.js
systems/: combat.py  database.py  dice.py  effects.py  email_service.py  generation.py  progression.py
tests/: __init__.py  conftest.py  test_combat.py  test_dice.py  test_game_tools.py  test_models.py  test_multiplayer.py  test_progression.py  test_systems.py
