[project]
name = "integration-quest"
version = "1.0.0"
description = "A Workato-themed RPG MCP server - Battle through legacy systems and API chaos!"
authors = [{name = "Integration Heroes"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dice>=2.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "config"]

[tool.setuptools.packages.find]
include = ["models*", "systems*"]

[tool.setuptools.package-data]
"*" = ["data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
